[package]
name = "rusty-zechub"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"
dialoguer = "0.11"
bip39 = { version = "2.0", features = ["rand"] }
chrono = { version = "0.4", features = ["clock"] }
clearscreen = "3.0"
anyhow = "1.0"
